# blue_pill_tmp36

./: .gitignore  Cargo.toml  README.md  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
