[package]
authors = ["JPFrancoia <jeanpatrick.francoia@gmail.com>"]
name = "tmp36"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1.1"
embedded-hal = "0.2.3"
panic-itm = "0.4.0"
itoa = {version="0.4.4", default-features=false}
ryu = "1.0.0"

[dependencies.stm32f1xx-hal]
version = "0.4.0"
features = ["stm32f103", "rt"]
